fix visible hi-fi element

--- a/huddle.css
+++ b/huddle.css
@@ -49,7 +49,8 @@
   margin: auto;
 }
 
-.mid-fi-slideshow-container {
+.mid-fi-slideshow-container,
+.hi-fi-slideshow-container {
   display: none;
 }
 
